# dev-scripts

./: .gitignore  Dockerfile  README.md  cherry-picker.sh  docker-clear.sh  dot_profile_ext  fetch-all.sh  tag.sh
aws/: db-by-tags.sh
cfengine/: cherry-picker.sh  fetch-all.sh  tag.sh
qtdev/: CMakeLists.txt  android-emulator.sh  build_modules  code_init  dependencies.rb  git-amend  git-amend.sh  git-gpush  git-gpush.sh  git-qt-init  git-qt-update  git-sync-to  qt  qt-project.cmake  qt6.natvis  qt_modules_update  run-on-android.sh  run-on-ios.sh  run_baseline.sh
qtdev/vscode_templates/: c_cpp_properties.json  launch.json  settings.json  tasks.json  tasks_app.json  template.code-workspace
